@@ -56,10 +56,12 @@ public class PiratesManageShotState extends State{
         Controller controller = context.getController();
         Player player = controller.getModel().getPlayer(playerName);
         if (player != context.getSpecialPlayers().getFirst()) {
+            controller.getModel().setError(true);
             throw new IllegalArgumentException("It's not the player's turn");
         }
         CannonShot shot = (CannonShot) context.getProjectile(0);
         if (shot == null) {
+            controller.getModel().setError(true);
             throw new NullPointerException("The shot is null");
         }
         SpaceshipComponent component = null;
@@ -110,7 +112,7 @@ public class PiratesManageShotState extends State{
         if(hit){
             boolean brokenShip = player.getShipBoard().checkIntegrity();
             if (brokenShip) {
-                controller.setState(new PiratesCheckShipState(context));
+                controller.getModel().setState(new PiratesCheckShipState(context));
                 return;
             }
         }
@@ -118,12 +120,15 @@ public class PiratesManageShotState extends State{
         if (turn > context.getSpecialPlayers().size()) {  //tutti i giocatori sono stati colpiti da questo shot
             context.removeProjectile(shot);
             if (context.getProjectiles().isEmpty()) {     //tutti i colpi sono stati sparati
-                controller.setState(new FlightPhase(controller));
+                controller.getModel().setState(new FlightPhase(controller));
+                controller.getModel().setError(false);
                 return;
             }
-            controller.setState(new PiratesCannonShotsState(context));
+            controller.getModel().setState(new PiratesCannonShotsState(context));
+            controller.getModel().setError(false);
         } else {
-            controller.setState(new PiratesManageShotState(context, number, turn));
+            controller.getModel().setState(new PiratesManageShotState(context, number, turn));
+            controller.getModel().setError(false);
         }
 
     }
@@ -141,20 +146,24 @@ public class PiratesManageShotState extends State{
      */
     @Override
     public void useItem(String playerName, ItemType itemType, Coordinates coordinates ){
+        Controller controller = context.getController();
         if (itemType != ItemType.BATTERIES) {
+            controller.getModel().setError(true);
             throw new IllegalArgumentException("Invalid item type, expected BATTERIES");
         }
-        Controller controller = context.getController();
         Player player = controller.getModel().getPlayer(playerName);
-        if (player != context.getSpecialPlayers().get(0)) {
+        if (player != context.getSpecialPlayers().getFirst()) {
+            controller.getModel().setError(true);
             throw new IllegalArgumentException("It's not the player's turn");
         }
         CannonShot shot = (CannonShot) context.getProjectile(0);
         if (shot == null) {
+            controller.getModel().setError(true);
             throw new NullPointerException("The shot is null");
         }
         SpaceshipComponent component = null;
         if(shot.isBig()){
+            controller.getModel().setError(true);
             throw new InvalidContextualAction("Cannot use batteries on a big shot");
         }
         boolean shieldFound = false;
@@ -183,8 +192,10 @@ public class PiratesManageShotState extends State{
 
         if(shieldFound) {
             SpaceshipComponent component2 = player.getShipBoard().getComponent(coordinates);
-            if(!player.getShipBoard().getCondensedShip().getBatteryCompartments().contains(component2))   //non è un Battery
-                return;
+            if(!player.getShipBoard().getCondensedShip().getBatteryCompartments().contains(component2)) {   //non è un Battery
+                controller.getModel().setError(true);
+                throw new InvalidContextualAction("Invalid component type, expected BatteryCompartment");
+            }
             BatteryCompartment compartment = (BatteryCompartment) component2;
             compartment.removeBattery();
 
@@ -192,12 +203,15 @@ public class PiratesManageShotState extends State{
             if (turn > context.getSpecialPlayers().size()) {  //tutti i giocatori sono stati colpiti da questo shot
                 context.removeProjectile(shot);
                 if (context.getProjectiles().isEmpty()) {     //tutti i colpi sono stati sparati
-                    controller.setState(new FlightPhase(controller));
+                    controller.getModel().setState(new FlightPhase(controller));
+                    controller.getModel().setError(false);
                     return;
                 }
-                controller.setState(new PiratesCannonShotsState(context));
+                controller.getModel().setState(new PiratesCannonShotsState(context));
+                controller.getModel().setError(false);
             } else {
-                controller.setState(new PiratesManageShotState(context, number, turn));
+                controller.getModel().setState(new PiratesManageShotState(context, number, turn));
+                controller.getModel().setError(false);
             }
         } else {
             ///TODO: return; //sta cercando di usare una batteria ma sarebbe sprecata non ha cannoni doppi o schudi
